# FreeRTOS_on_Pico_Real-Time_Temperature_Monitoring

./: README.md
app/: CMakeLists.txt  main.c
